--- a/cluster.ipynb
+++ b/cluster.ipynb
@@ -38,19 +38,32 @@
    "outputs": [],
    "source": [
     "# Importamos las variables numpy y le ponemos un alias, para poder llamarlos de manera ams rapida \n",
+    "import pandas as pd\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import seaborn as sb\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Nos permitira hacer las matrices distancias (Manhathan, euclidea)\n",
+    "from scipy.spatial import distance_matrix\n",
+    "\n",
+    "# Funcion linkage: Nos permitira hacer el dicho enlace para formara los grupos\n",
+    "# Funcion dendogram: Nos permitira visualizar los los graficos del dendogramas \n",
+    "from scipy.cluster.hierarchy import dendrogram, linkage \n",
+    "\n",
+    "# Funcion AgglomerativeClustering: Nos permitira extraer las etiquetas de los grupos para hacer el contraste con la varibale original\n",
+    "from sklearn.cluster import AgglomerativeClustering "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "65d73cdf-9622-4931-a947-1bcfeff6f246",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Esta función nos servira para plantar una semilla y hace que los valores aleatorios con los que trabajamos no varien\n",
-    "np.random.seed(1991)"
+    "np.random.seed(1989)"
    ]
   },
   {
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f6e31d01-1e06-444d-97f8-7cf1303b3cd9",
    "metadata": {},
    "outputs": [],
@@ -84,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7f8528a1-bfa4-49cb-a711-3ce11b261a37",
    "metadata": {},
    "outputs": [
@@ -199,7 +212,7 @@
        "2                        0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d1907b25-2d38-4d7b-88c7-075d70a508e8",
    "metadata": {},
    "outputs": [
@@ -374,7 +387,7 @@
        "4                        0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "02de0cc6",
    "metadata": {},
    "outputs": [],
@@ -410,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "45708bf0",
    "metadata": {},
    "outputs": [
@@ -740,7 +753,7 @@
        "facturación_electrónica                 1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8848426a-0439-4ae3-8244-8413cc33b9ed",
    "metadata": {},
    "outputs": [],
@@ -803,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7713cd0c",
    "metadata": {},
    "outputs": [],
@@ -824,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9fd70429-2801-40d8-a6f8-1389d07be6ef",
    "metadata": {},
    "outputs": [],
@@ -835,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "61a22726-8ba9-4ea5-94f3-b12838ea2bb8",
    "metadata": {},
    "outputs": [
@@ -868,6 +881,14 @@
    "source": [
     "### Segunda parte"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55f2a291",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
